--- a/src/css/OC.css
+++ b/src/css/OC.css
@@ -3719,7 +3719,6 @@
   height: 28px;
   text-align: center;
   text-decoration: none solid rgb(105, 105, 105);
-  width: 93.2969px;
   column-rule-color: rgb(105, 105, 105);
   perspective-origin: 46.6406px 14px;
   transform-origin: 46.6406px 14px;
